# schediazo

./: .gitignore  README.md  pyproject.toml  requirements.txt  schediazo_conda_environment.yaml
docs/: notes.md  units.md
docs/source/: alignment.rst  conf.py  drawing.rst  fullapi.rst  getting-started.rst  index.rst  transforms.rst
examples/: example_shape_to_path.py  example_shapes.py  example_text.py  pencil_logo.py  styles_and_classes.py  using_units.py
source/schediazo/: __init__.py  align.py  attributes.py  colour.py  containers.py  core.py  drawing.py  elements.py  image.py  maths.py  paper.py  part.py  paths.orig.py  paths.py  shapes.py  svg.py  text.py  transforms.py  units.py
tests/: test_align.py  test_attributes.py  test_part.py  test_transforms.py  test_units.py
